@@ -1,6 +1,9 @@
 package com.backendforfooddelci.configuration;
 
 
+import static org.springframework.security.config.Customizer.withDefaults;
+
+import java.util.Arrays;
 import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
@@ -8,8 +11,6 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.core.Ordered;
 import org.springframework.core.annotation.Order;
-import org.springframework.security.access.vote.RoleVoter;
-import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -17,24 +18,20 @@ import org.springframework.security.config.annotation.web.configuration.EnableWe
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.annotation.web.configurers.oauth2.server.resource.OAuth2ResourceServerConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.core.userdetails.User;
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.NoOpPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
-import org.springframework.security.crypto.factory.PasswordEncoderFactories;
 import org.springframework.security.oauth2.jwt.JwtDecoder;
 import org.springframework.security.oauth2.jwt.JwtEncoder;
 import org.springframework.security.oauth2.jwt.NimbusJwtDecoder;
 import org.springframework.security.oauth2.jwt.NimbusJwtEncoder;
 import org.springframework.security.oauth2.server.resource.web.BearerTokenAuthenticationEntryPoint;
 import org.springframework.security.oauth2.server.resource.web.access.BearerTokenAccessDeniedHandler;
-import org.springframework.security.provisioning.InMemoryUserDetailsManager;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.security.web.util.matcher.AntPathRequestMatcher;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.web.filter.CorsFilter;
 
 import com.nimbusds.jose.jwk.JWK;
 import com.nimbusds.jose.jwk.JWKSet;
@@ -42,11 +39,6 @@ import com.nimbusds.jose.jwk.RSAKey;
 import com.nimbusds.jose.jwk.source.ImmutableJWKSet;
 import com.nimbusds.jose.jwk.source.JWKSource;
 import com.nimbusds.jose.proc.SecurityContext;
-
-import jakarta.servlet.Filter;
-
-import org.springframework.security.oauth2.server.resource.web.BearerTokenAuthenticationFilter;
-import static org.springframework.security.config.Customizer.*;
 
 
 
@@ -75,13 +67,21 @@ public class SecurityConfig {
 	    }
 	
 
+		@SuppressWarnings("removal")
 		@Bean
 	    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
 	        http
 	            .csrf().disable()
-	            .authorizeRequests(authorize -> authorize.requestMatchers("/RegisterUser","/RegisterAdminUser").permitAll().anyRequest().authenticated())
+	          // Disable CSRF for simplicity, enable it in production
+	            .authorizeRequests(authorize -> authorize
+	                .requestMatchers("/RegisterUser", "/RegisterAdminUser","/Restaurant/menus/{id}","/RegisterRestro", "/findFoodRestutantAndcuisine/{value}", "/Login/token", "/places/{userInput}")
+	                .permitAll()
+	                .anyRequest()
+	                .authenticated()
+	            )
 	      
 	            .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+	          
 	            .oauth2ResourceServer(OAuth2ResourceServerConfigurer::jwt)
 	            .exceptionHandling(exceptionHandling ->
 	                    exceptionHandling.authenticationEntryPoint(new BearerTokenAuthenticationEntryPoint())
@@ -107,9 +107,7 @@ public class SecurityConfig {
 			
 				.authorizeHttpRequests(auth -> 
 				
-				auth
-				
-				.anyRequest().authenticated()
+			 auth.anyRequest().authenticated()
 				)      
 				
 				
@@ -136,27 +134,24 @@ public class SecurityConfig {
 		return new NimbusJwtEncoder(jwks);
 	}
 
-	@Bean
-	CorsConfigurationSource corsConfigurationSource() {
-		CorsConfiguration configuration = new CorsConfiguration();
-		configuration.setAllowedOrigins(List.of("https://localhost:3000"));
-		configuration.setAllowedHeaders(List.of("*"));
-		configuration.setAllowedMethods(List.of("GET"));
-		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-		source.registerCorsConfiguration("/**", configuration);
-		return source;
-	}
-	
+    @Bean
+    public CorsFilter corsFilter() {
+        CorsConfiguration configuration = new CorsConfiguration();
+        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000"));
+        configuration.setAllowedMethods(Arrays.asList("*"));
+        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowCredentials(true);
+
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", configuration);
+
+        return new CorsFilter(source);
+    }	
 
     @Bean
     PasswordEncoder passwordEncoder() {
     	return NoOpPasswordEncoder.getInstance();
     }
 
-    @Bean
-    public RoleVoter roleVoter() {
-        RoleVoter roleVoter = new RoleVoter();
-        roleVoter.setRolePrefix(""); // Remove the ROLE_ prefix
-        return roleVoter;
-    }
+
 }
